-
Bug
-
Resolution: Done
-
P1: Critical
-
5.12.3
-
-
08215dd21ebefe41f30e43d630a68d644419d021 (qt/qtdeclarative/5.12)
Attached application crashes with following stack (Qt 5.12.3):
1 QV4::PersistentValueStorage::allocate qv4persistent.cpp 208 0x7ffff73c0f5e
2 QJSValuePrivate::setValue qjsvalue_p.h 88 0x7ffff73b74a7
3 QJSValue::QJSValue qjsvalue.cpp 280 0x7ffff73b74a7
4 QtMetaTypePrivate::QMetaTypeFunctionHelper<QJSValue, true>::Construct qmetatype.h 804 0x7ffff7313139
5 QMetaType::construct qmetatype.h 2240 0x7ffff6f52ffa
6 (anonymous namespace)::customConstruct qvariant.cpp 1474 0x7ffff6f52ffa
7 QVariant::create qvariant.cpp 1806 0x7ffff6f530d7
8 QVariant::QVariant qvariant.cpp 2139 0x7ffff6f532ea
9 qVariantFromValue<QJSValue> qvariant.h 520 0x7ffff7504132
10 QVariant::fromValue<QJSValue> qvariant.h 366 0x7ffff7504132
11 toVariant qv4engine.cpp 1376 0x7ffff7504132
12 QV4::ExecutionEngine::toVariant qv4engine.cpp 1271 0x7ffff75041d3
13 QQmlVMEMetaObject::readPropertyAsVariant qqmlvmemetaobject.cpp 1021 0x7ffff75371dc
14 QQmlVMEMetaObject::metaCall qqmlvmemetaobject.cpp 649 0x7ffff7539b09
15 QMetaObject::metacall qmetaobject.cpp 301 0x7ffff6f1a215
16 QMetaProperty::read qmetaobject.cpp 3150 0x7ffff6f20e65
17 Qt3DCore::QNodePrivate::propertyChanged qnode.cpp 418 0x7fffe8472538
18 Qt3DCore::PropertyChangeHandler<Qt3DCore::QNodePrivate>::qt_metacall propertychangehandler_p.h 121 0x7fffe847564f
19 QMetaObject::metacall qmetaobject.cpp 303 0x7ffff6f1a21d
20 QMetaObject::activate qobject.cpp 3812 0x7ffff6f40cbb
21 QQmlVMEMetaObject::activate qqmlvmemetaobject.cpp 1246 0x7ffff7537a69
22 QQmlVMEMetaObject::writeVarProperty qqmlvmemetaobject.cpp 1063 0x7ffff7539537
23 QQmlVMEMetaObject::setVMEProperty qqmlvmemetaobject.cpp 1166 0x7ffff75395e5
24 QQmlBinding::slowWrite qqmlbinding.cpp 431 0x7ffff75d0f80
25 GenericBinding<0>::write qqmlbinding.cpp 325 0x7ffff75d43f5
26 QQmlNonbindingBinding::doUpdate qqmlbinding.cpp 249 0x7ffff75d5a20
27 QQmlBinding::update qqmlbinding.cpp 185 0x7ffff75d2794
28 QQmlBinding::expressionChanged qqmlbinding.cpp 530 0x7ffff75d2916
29 QQmlJavaScriptExpressionGuard_callback qqmljavascriptexpression.cpp 414 0x7ffff75c7561
30 QQmlNotifier::emitNotify qqmlnotifier.cpp 104 0x7ffff75a4424
31 QQmlData::signalEmitted qqmlengine.cpp 883 0x7ffff753f3ee
32 QMetaObject::activate qobject.cpp 3665 0x7ffff6f40605
33 QMetaObject::activate qobject.cpp 3648 0x7ffff6f40f33
34 Tracker::trackedMarkersChanged moc_Tracker.cpp 180 0x404711
35 Tracker::Tracker(QObject *)::{lambda()#1}::operator()() const Tracker.cpp 11 0x402301
36 QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, Tracker::Tracker(QObject *)::<lambda()>>::call(Tracker::<lambda()> &, void * *) qobjectdefs_impl.h 146 0x402689
37 QtPrivate::Functor<Tracker::Tracker(QObject *)::<lambda()>, 0>::call<QtPrivate::List<>, void>(Tracker::<lambda()> &, void *, void * *) qobjectdefs_impl.h 256 0x40265b
38 QtPrivate::QFunctorSlotObject<Tracker::Tracker(QObject *)::<lambda()>, 0, QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void * *, bool *) qobjectdefs_impl.h 439 0x402629
39 QtPrivate::QSlotObjectBase::call qobjectdefs_impl.h 394 0x7ffff6f40a6d
40 QMetaObject::activate qobject.cpp 3776 0x7ffff6f40a6d
41 QMetaObject::activate qobject.cpp 3648 0x7ffff6f40f33
42 QTimer::timeout moc_qtimer.cpp 204 0x7ffff6f4dc6e
43 QTimer::timerEvent qtimer.cpp 255 0x7ffff6f4de93
44 QObject::event qobject.cpp 1241 0x7ffff6f4135b
45 QCoreApplicationPrivate::notify_helper qcoreapplication.cpp 1220 0x7ffff6f0ec4d
46 doNotify qcoreapplication.cpp 1150 0x7ffff6f0ecdb
47 QCoreApplication::notify qcoreapplication.cpp 1136 0x7ffff6f0ee4f
48 QGuiApplication::notify qguiapplication.cpp 1791 0x7ffff7908088
49 QCoreApplication::notifyInternal2 qcoreapplication.cpp 1060 0x7ffff6f0eda4
50 QCoreApplication::sendEvent qcoreapplication.cpp 1450 0x7ffff6f0efe4
51 QTimerInfoList::activateTimers qtimerinfo_unix.cpp 643 0x7ffff6f6de6e
52 timerSourceDispatch qeventdispatcher_glib.cpp 182 0x7ffff6f6e6a3
53 g_main_context_dispatch 0x7ffff47c0197
54 ?? 0x7ffff47c03f0
55 g_main_context_iteration 0x7ffff47c049c
56 QEventDispatcherGlib::processEvents qeventdispatcher_glib.cpp 422 0x7ffff6f6ea9d
57 QXcbGlibEventDispatcher::processEvents qxcbeventdispatcher.cpp 143 0x7ffff7ee3356
58 QEventLoop::processEvents qeventloop.cpp 138 0x7ffff6f0cc75
59 QEventLoop::exec qeventloop.cpp 225 0x7ffff6f0d0ee
60 QCoreApplication::exec qcoreapplication.cpp 1363 0x7ffff6f16c56
61 QGuiApplication::exec qguiapplication.cpp 1779 0x7ffff7902194
62 main main.cpp 18 0x402cee