src/qml/jsapi/qjsvalue_p.h
@@ -60,6 +60,8 @@
 #include <private/qv4mm_p.h>
 #include <private/qv4persistent_p.h>
 
+#include <QtCore/qthread.h>
+
 QT_BEGIN_NAMESPACE
 
 class Q_AUTOTEST_EXPORT QJSValuePrivate
@@ -77,6 +79,11 @@ public:
         if (jsval->d & 1)
             return reinterpret_cast<QVariant *>(jsval->d & ~3);
         return nullptr;
+    }
+
+    static inline void setRawValue(QJSValue *jsval, QV4::Value *v)
+    {
+        jsval->d = reinterpret_cast<quintptr>(v);
     }
 
     static inline void setVariant(QJSValue *jsval, const QVariant &v) {
@@ -169,10 +176,20 @@ public:
     }
 
     static inline void free(QJSValue *jsval) {
-        if (QV4::Value *v = QJSValuePrivate::getValue(jsval))
+        if (QV4::Value *v = QJSValuePrivate::getValue(jsval)) {
+            if (QV4::ExecutionEngine *e = engine(jsval)) {
+                if (QJSEngine *jsEngine = e->jsEngine()) {
+                    if (jsEngine->thread() != QThread::currentThread()) {
+                        QMetaObject::invokeMethod(
+                                jsEngine, [v](){ QV4::PersistentValueStorage::free(v); });
+                        return;
+                    }
+                }
+            }
             QV4::PersistentValueStorage::free(v);
-        else if (QVariant *v = QJSValuePrivate::getVariant(jsval))
+        } else if (QVariant *v = QJSValuePrivate::getVariant(jsval)) {
             delete v;
+        }
     }
 };
 
